--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,15 @@ joblib==0.13.2
 Cython==0.29.13
 pandas==0.25.3
 scikit-learn==0.21.3
+h5py==2.8.0
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+#numpy==1.15.4
+#pandas==0.23.4
+#scipy==1.3.3
+#tensorboard==1.13.1
+tensorflow==1.13.1
+#tensorflow-estimator==1.13.0
+#tqdm==4.28.1
+#wfdb==2.2.1
